// version of protocol buffer used
syntax = "proto3";
// package name for the buffer will be used later
package notifications;
option go_package = ".;proto_generated";

// service which can be executed
service Notification {
  rpc GetNotifications(NotificationRequest) returns (NotificationList);
}

message NotificationRequest{}

message NotificationList{
  repeated string notification = 1;
}